# DysonSphere

./: CMakeLists.txt  README.md
assets/shaders/: basePass.frag  basePass.verrt  bloomCombineFS.glsl  bloomDownsampleFS.glsl  bloomExtractFS.glsl  bloomExtractVS.glsl  bloomUpsampleBilateralFS.glsl  particlePass.cs
include/: ComputeParticles.h  GLUtils.h  MathUtils.h  ParticleSystem.h  ShaderBuffer.h  ShaderUtils.h  noise.h  uniforms.h
src/: ComputeParticles.cpp  ParticleSystem.cpp  ShaderUtils.cpp  main.cpp  noise.cpp
